--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "test": "mocha",
+    "lint": "./node_modules/.bin/eslint *",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
   },
   "repository": {
@@ -26,6 +27,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "coveralls": "^2.11.15",
+    "eslint": "^3.13.1",
     "mocha": "^3.2.0",
     "mocha-lcov-reporter": "^1.2.0",
     "morgan": "^1.7.0"
