--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@
     - PORT=3000
   sudo: required
   before_script: npm install
-  after_script: npm coveralls
+  after_script: npm run coveralls
   script:
     - npm test
-    - npm lint
+    - npm run lint
